PZS-NG CHANGELOG
----------------

v1.2.0  --> 1.2.x :
		- Fix overwriting of LDFLAGS when enabling FLAC (fixed by tittof)
		- Make configure more portable
		- Remove bashisms from the configure script
		- Move mp3 year checking code so it applies on flac files too
		- Clean up mp3 tag info gathering
		- Fix crashing zipscript when junk is present in the ID3-year tag and id3_year is used in the completebar (fixed by capone)
		- Added socks5 proxy support for TVRage sitebot plugin (based on code by crx)
		- Fix swapped arguments in dl_speedtest (fixed by rbt)
		- Enhance AutoOp sitebot plugin to handle any availible IRC mode. Renamed to AutoIRCFlag.
		- Fixed bug #535: !bnc command failing to parse ping reply on BSD
		- Fix deletion of .message when deleting a dir (fixed by DuReX)
		- Fix ng-chown being unable to change usernames when a user_name was given (thanks to tittof for noticing)
		- Added warnings to ng-chown when zsconfig-settings conflict with given params
		- Fix configure working with any future glftpd v2.04 up to v2.09
		- Fix GameFAQs sitebot plugin
		- Fix configure working with glftpd 2.03
		- Add .log to the allowed_types by default
		- Update default allowed_years to include 2014
		- ^--- 2014 ---^
		- Change "Psychadelic" to "Psychedelic". According to ID3
		  there is no ID3 genre standard: Q5 at http://id3.org/FAQ
		  So if there's no chance for a fix of a non-existing standard,
		  I quit following it and fix what's wrong with it.
		  Any other suggestions welcome though not of the American vs British English kind.
		- Fix typo in audio-genre-script (thanks to tittof for noticing)
		- Updated psxc-imdb.sh, see it's changelog
		- Refactor SFV-parsing
		- Fixed bug where not all data was available in the cookies for
		  the complete bar when the sfv was uploaded last.
		- Changed get_rar_info methodcall in preparation for a bugfix.
		- Made comment-removal in sfvs to be separately definable.